# Virtual

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
components/: tracker.py
core/: keyboard.py  mouse.py  tracker.py
src/: configs.py
src/components/: linux_vol.py
src/components/helpers/: distance.py  hand_state.py  open_or_close.py  os_detection.py  volume_manager.py
src/components/mouse_controls/: buttons.py  mouse_pointer.py
src/components/tracking/: hand_tracker.py  tracker.py  volume_tracker.py
src/components/volume/: linux_vol.py  mac_vol.py  windows_vol.py
src/components/volume_controls/: linux_vol.py  mac_vol.py  windows_vol.py
src/core/: keyboard.py  mode.py  mouse.py  volume.py
